Basketball API Schedule replace Football schedule

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ HealthyGatorSportsFanRN\constants\AppUrls.ts
 
 # Ignore FCM file
 HealthyGatorSportsFanRN\google-services.json
+
+#Ignore Virtual environment
+venv/
