--- a/HealthyGatorSportsFanRN/package.json
+++ b/HealthyGatorSportsFanRN/package.json
@@ -22,6 +22,7 @@
     "expo-linking": "~7.0.2",
     "expo-notifications": "~0.29.8",
     "expo-router": "~4.0.21",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.2",
@@ -36,10 +37,10 @@
     "react-native-star-rating-widget": "^1.9.1",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "typescript": "^5.3.3",
-    "expo-secure-store": "~14.0.1"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12"
+    "@types/react": "^18.3.28",
+    "@types/react-native": "^0.73.0"
   }
 }
